--- a/pr4/z3.ipynb
+++ b/pr4/z3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "9ccd800d-a08f-406b-a0c7-9ccf708f5049",
    "metadata": {},
    "outputs": [],
@@ -14,47 +14,214 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a5320413-3f71-480b-9294-f6cfcb72d8dd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def y_func(x):  \n",
-    "    return math.tan(pow(x,2))/(pow(x,2) + 1)\n",
-    "\n",
-    "def y_func_test(x):\n",
-    "    return math.sin(2*x-2.1)/(pow(x,2)+1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "id": "7be730e7-1f89-4009-92fd-cdf035060f87",
    "metadata": {},
    "outputs": [],
    "source": [
     "# 3\n",
-    "# h = 0.1\n",
-    "# a = 0.2\n",
-    "# b = 1"
+    "\n",
+    "def y_func(x):  \n",
+    "    return math.tan(pow(x,2))/(pow(x,2) + 1)\n",
+    "        \n",
+    "h = 0.1\n",
+    "a = 0.2\n",
+    "b = 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "f8c80f60-8b6a-4a8f-ac94-0fa92358fe32",
    "metadata": {},
    "outputs": [],
    "source": [
     "#test\n",
-    "h = 0.05\n",
-    "a = 1.2\n",
-    "b = 1.6"
+    "\n",
+    "# def y_func(x):\n",
+    "#     return math.sin(2*x-2.1)/(pow(x,2)+1)\n",
+    "\n",
+    "# h = 0.05\n",
+    "# a = 1.2\n",
+    "# b = 1.6"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "dd0965b6-0156-4042-9f87-6ba8e9f54cff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = []\n",
+    "y = []\n",
+    "for i in range(0,9):\n",
+    "    xi = a + h*i\n",
+    "    yi = y_func(xi)\n",
+    "    x.append(xi)\n",
+    "    y.append(yi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "2f8984d2-34b5-4a92-bcb3-d20ac003d2c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.24510613716186672"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y0y8 =  [y[0]] + [None]*7 + [y[8]]\n",
+    "y1y3y5y7 = [y[i] if i%2==1 else None for i in range(9)]\n",
+    "y2y4y6 = [y[i] if i in [2,4,6] else None for i in range(9)]\n",
+    "\n",
+    "I = h/3 * (sum(filter(None, y0y8)) + 4 * sum(filter(None,y1y3y5y7)) + 2 * sum(filter(None,y0y8)))\n",
+    "\n",
+    "I"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "0da4f188-bf6f-4374-a699-3e9e00cd0d6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>x</th>\n",
+       "      <th>y0, y8</th>\n",
+       "      <th>y1, y3, y5, y7</th>\n",
+       "      <th>y2, y4, y6</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.038482</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.082792</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.139120</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.204274</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.6</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.276767</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.7</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.357979</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0.8</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.453990</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0.9</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.580362</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.778704</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     x    y0, y8  y1, y3, y5, y7  y2, y4, y6\n",
+       "0  0.2  0.038482             NaN         NaN\n",
+       "1  0.3       NaN        0.082792         NaN\n",
+       "2  0.4       NaN             NaN    0.139120\n",
+       "3  0.5       NaN        0.204274         NaN\n",
+       "4  0.6       NaN             NaN    0.276767\n",
+       "5  0.7       NaN        0.357979         NaN\n",
+       "6  0.8       NaN             NaN    0.453990\n",
+       "7  0.9       NaN        0.580362         NaN\n",
+       "8  1.0  0.778704             NaN         NaN"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "table1 = pd.DataFrame({\n",
+    "    'x' : x,\n",
+    "    'y0, y8' : y0y8,\n",
+    "    'y1, y3, y5, y7' : y1y3y5y7,\n",
+    "    'y2, y4, y6' : y2y4y6\n",
+    "})\n",
+    "\n",
+    "table1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "bc60fa3d-8876-407d-9e6b-bf9d59a6515c",
    "metadata": {},
    "outputs": [
     {
@@ -88,71 +255,71 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.121115</td>\n",
-       "      <td>0.030853</td>\n",
-       "      <td>-0.004596</td>\n",
-       "      <td>0.000165</td>\n",
-       "      <td>0.000032</td>\n",
+       "      <td>0.038482</td>\n",
+       "      <td>0.044310</td>\n",
+       "      <td>0.012017</td>\n",
+       "      <td>-0.003192</td>\n",
+       "      <td>0.001706</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.151968</td>\n",
-       "      <td>0.026257</td>\n",
-       "      <td>-0.004432</td>\n",
-       "      <td>0.000197</td>\n",
-       "      <td>0.000025</td>\n",
+       "      <td>0.082792</td>\n",
+       "      <td>0.056328</td>\n",
+       "      <td>0.008826</td>\n",
+       "      <td>-0.001486</td>\n",
+       "      <td>0.002864</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.178225</td>\n",
-       "      <td>0.021825</td>\n",
-       "      <td>-0.004235</td>\n",
-       "      <td>0.000222</td>\n",
-       "      <td>0.000019</td>\n",
+       "      <td>0.139120</td>\n",
+       "      <td>0.065153</td>\n",
+       "      <td>0.007340</td>\n",
+       "      <td>0.001379</td>\n",
+       "      <td>0.004703</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.200050</td>\n",
-       "      <td>0.017591</td>\n",
-       "      <td>-0.004013</td>\n",
-       "      <td>0.000240</td>\n",
-       "      <td>0.000013</td>\n",
+       "      <td>0.204274</td>\n",
+       "      <td>0.072493</td>\n",
+       "      <td>0.008719</td>\n",
+       "      <td>0.006081</td>\n",
+       "      <td>0.009479</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.217641</td>\n",
-       "      <td>0.013578</td>\n",
-       "      <td>-0.003773</td>\n",
-       "      <td>0.000254</td>\n",
-       "      <td>0.000009</td>\n",
+       "      <td>0.276767</td>\n",
+       "      <td>0.081212</td>\n",
+       "      <td>0.014800</td>\n",
+       "      <td>0.015561</td>\n",
+       "      <td>0.026049</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>0.231219</td>\n",
-       "      <td>0.009805</td>\n",
-       "      <td>-0.003519</td>\n",
-       "      <td>0.000263</td>\n",
+       "      <td>0.357979</td>\n",
+       "      <td>0.096012</td>\n",
+       "      <td>0.030360</td>\n",
+       "      <td>0.041610</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>0.241024</td>\n",
-       "      <td>0.006286</td>\n",
-       "      <td>-0.003256</td>\n",
+       "      <td>0.453990</td>\n",
+       "      <td>0.126372</td>\n",
+       "      <td>0.071970</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>0.247310</td>\n",
-       "      <td>0.003030</td>\n",
+       "      <td>0.580362</td>\n",
+       "      <td>0.198342</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>0.250339</td>\n",
+       "      <td>0.778704</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -164,46 +331,23 @@
       ],
       "text/plain": [
        "          y       yp1       yp2       yp3       yp4\n",
-       "0  0.121115  0.030853 -0.004596  0.000165  0.000032\n",
-       "1  0.151968  0.026257 -0.004432  0.000197  0.000025\n",
-       "2  0.178225  0.021825 -0.004235  0.000222  0.000019\n",
-       "3  0.200050  0.017591 -0.004013  0.000240  0.000013\n",
-       "4  0.217641  0.013578 -0.003773  0.000254  0.000009\n",
-       "5  0.231219  0.009805 -0.003519  0.000263       NaN\n",
-       "6  0.241024  0.006286 -0.003256       NaN       NaN\n",
-       "7  0.247310  0.003030       NaN       NaN       NaN\n",
-       "8  0.250339       NaN       NaN       NaN       NaN"
+       "0  0.038482  0.044310  0.012017 -0.003192  0.001706\n",
+       "1  0.082792  0.056328  0.008826 -0.001486  0.002864\n",
+       "2  0.139120  0.065153  0.007340  0.001379  0.004703\n",
+       "3  0.204274  0.072493  0.008719  0.006081  0.009479\n",
+       "4  0.276767  0.081212  0.014800  0.015561  0.026049\n",
+       "5  0.357979  0.096012  0.030360  0.041610       NaN\n",
+       "6  0.453990  0.126372  0.071970       NaN       NaN\n",
+       "7  0.580362  0.198342       NaN       NaN       NaN\n",
+       "8  0.778704       NaN       NaN       NaN       NaN"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x = []\n",
-    "y = []\n",
-    "for i in range(0,9):\n",
-    "    xi = a + h*i\n",
-    "    yi = y_func_test(xi)\n",
-    "    x.append(xi)\n",
-    "    y.append(yi)\n",
-    "\n",
-    "\n",
-    "I = h/3\n",
-    "_ = y[0]+y[8]\n",
-    "\n",
-    "sum1=0\n",
-    "for i in range(1,8,2):\n",
-    "    sum1+=y[i]\n",
-    "_+=sum1*4\n",
-    "\n",
-    "sum2 = 0\n",
-    "for i in range(2,7,2):\n",
-    "    sum2+=y[i]\n",
-    "_+=sum2*2\n",
-    "\n",
-    "I*=_\n",
     "\n",
     "yp1 = []\n",
     "yp2 = []\n",
@@ -223,19 +367,19 @@
     "for i in range(len(yp3)-1):\n",
     "    yp4.append(yp3[i+1] - yp3[i])\n",
     "\n",
-    "df = pd.DataFrame({\n",
+    "table2 = pd.DataFrame({\n",
     "    'y': y,\n",
     "    'yp1': yp1 + [None],  # Заполняем последнюю позицию None\n",
     "    'yp2': yp2 + [None, None],  # Заполняем последние позиции None\n",
     "    'yp3': yp3 + [None, None, None],  # Заполняем последние позиции None\n",
     "    'yp4' : yp4 + [None, None, None, None]\n",
     "})\n",
-    "df"
+    "table2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "c77832f6-0605-4a46-9fe9-f8e71e36ab2a",
    "metadata": {},
    "outputs": [],
@@ -246,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "00b592b1-94ad-4f98-bd0e-69279b1c27d6",
    "metadata": {},
    "outputs": [
@@ -254,21 +398,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7.143959401397413e-08 1.2859126922515344e-05\n"
+      "0.00011577405567764161 0.02083933002197549\n"
      ]
     }
    ],
    "source": [
     "print(R,dI)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d1242c8f-fca9-4fe8-9183-418c7b526554",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
