--- a/pr3/3_1.ipynb
+++ b/pr3/3_1.ipynb
@@ -14,13 +14,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
    "id": "167e97c5-967f-4ae8-9bbd-85435a7ef5dd",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-02T16:54:38.514493Z",
+     "start_time": "2024-12-02T16:54:38.511119Z"
+    }
+   },
    "source": [
     "import numpy as np"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 2
   },
   {
    "cell_type": "code",
