--- a/pr4/z3.ipynb
+++ b/pr4/z3.ipynb
@@ -2,21 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
    "id": "9ccd800d-a08f-406b-a0c7-9ccf708f5049",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-03T06:28:52.308710Z",
+     "start_time": "2024-12-03T06:28:51.200699Z"
+    }
+   },
    "source": [
     "import pandas as pd\n",
     "import math"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
    "id": "7be730e7-1f89-4009-92fd-cdf035060f87",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-03T06:28:52.531334Z",
+     "start_time": "2024-12-03T06:28:52.517099Z"
+    }
+   },
    "source": [
     "# 3\n",
     "\n",
@@ -26,14 +34,19 @@
     "h = 0.1\n",
     "a = 0.2\n",
     "b = 1"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 2
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
    "id": "f8c80f60-8b6a-4a8f-ac94-0fa92358fe32",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-03T06:28:52.605089Z",
+     "start_time": "2024-12-03T06:28:52.596006Z"
+    }
+   },
    "source": [
     "#test\n",
     "\n",
@@ -43,14 +56,19 @@
     "# h = 0.05\n",
     "# a = 1.2\n",
     "# b = 1.6"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 3
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
    "id": "dd0965b6-0156-4042-9f87-6ba8e9f54cff",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-03T06:28:52.681817Z",
+     "start_time": "2024-12-03T06:28:52.674257Z"
+    }
+   },
    "source": [
     "x = []\n",
     "y = []\n",
@@ -59,13 +77,28 @@
     "    yi = y_func(xi)\n",
     "    x.append(xi)\n",
     "    y.append(yi)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 4
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
    "id": "2f8984d2-34b5-4a92-bcb3-d20ac003d2c3",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-03T06:28:52.736291Z",
+     "start_time": "2024-12-03T06:28:52.721678Z"
+    }
+   },
+   "source": [
+    "y0y8 =  [y[0]] + [None]*7 + [y[8]]\n",
+    "y1y3y5y7 = [y[i] if i%2==1 else None for i in range(9)]\n",
+    "y2y4y6 = [y[i] if i in [2,4,6] else None for i in range(9)]\n",
+    "\n",
+    "I = h/3 * (sum(filter(None, y0y8)) + 4 * sum(filter(None,y1y3y5y7)) + 2 * sum(filter(None,y0y8)))\n",
+    "\n",
+    "I"
+   ],
    "outputs": [
     {
      "data": {
@@ -78,24 +111,42 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "y0y8 =  [y[0]] + [None]*7 + [y[8]]\n",
-    "y1y3y5y7 = [y[i] if i%2==1 else None for i in range(9)]\n",
-    "y2y4y6 = [y[i] if i in [2,4,6] else None for i in range(9)]\n",
-    "\n",
-    "I = h/3 * (sum(filter(None, y0y8)) + 4 * sum(filter(None,y1y3y5y7)) + 2 * sum(filter(None,y0y8)))\n",
-    "\n",
-    "I"
-   ]
+   "execution_count": 5
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
    "id": "0da4f188-bf6f-4374-a699-3e9e00cd0d6c",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-03T06:28:52.829018Z",
+     "start_time": "2024-12-03T06:28:52.800785Z"
+    }
+   },
+   "source": [
+    "table1 = pd.DataFrame({\n",
+    "    'x' : x,\n",
+    "    'y0, y8' : y0y8,\n",
+    "    'y1, y3, y5, y7' : y1y3y5y7,\n",
+    "    'y2, y4, y6' : y2y4y6\n",
+    "})\n",
+    "\n",
+    "table1"
+   ],
    "outputs": [
     {
      "data": {
+      "text/plain": [
+       "     x    y0, y8  y1, y3, y5, y7  y2, y4, y6\n",
+       "0  0.2  0.038482             NaN         NaN\n",
+       "1  0.3       NaN        0.082792         NaN\n",
+       "2  0.4       NaN             NaN    0.139120\n",
+       "3  0.5       NaN        0.204274         NaN\n",
+       "4  0.6       NaN             NaN    0.276767\n",
+       "5  0.7       NaN        0.357979         NaN\n",
+       "6  0.8       NaN             NaN    0.453990\n",
+       "7  0.9       NaN        0.580362         NaN\n",
+       "8  1.0  0.778704             NaN         NaN"
+      ],
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -188,18 +239,6 @@
        "  </tbody>\n",
        "</table>\n",
        "</div>"
-      ],
-      "text/plain": [
-       "     x    y0, y8  y1, y3, y5, y7  y2, y4, y6\n",
-       "0  0.2  0.038482             NaN         NaN\n",
-       "1  0.3       NaN        0.082792         NaN\n",
-       "2  0.4       NaN             NaN    0.139120\n",
-       "3  0.5       NaN        0.204274         NaN\n",
-       "4  0.6       NaN             NaN    0.276767\n",
-       "5  0.7       NaN        0.357979         NaN\n",
-       "6  0.8       NaN             NaN    0.453990\n",
-       "7  0.9       NaN        0.580362         NaN\n",
-       "8  1.0  0.778704             NaN         NaN"
       ]
      },
      "execution_count": 6,
@@ -207,25 +246,61 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "table1 = pd.DataFrame({\n",
-    "    'x' : x,\n",
-    "    'y0, y8' : y0y8,\n",
-    "    'y1, y3, y5, y7' : y1y3y5y7,\n",
-    "    'y2, y4, y6' : y2y4y6\n",
-    "})\n",
-    "\n",
-    "table1"
-   ]
+   "execution_count": 6
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
    "id": "bc60fa3d-8876-407d-9e6b-bf9d59a6515c",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-03T06:28:52.956963Z",
+     "start_time": "2024-12-03T06:28:52.931760Z"
+    }
+   },
+   "source": [
+    "\n",
+    "yp1 = []\n",
+    "yp2 = []\n",
+    "yp3 = [] \n",
+    "yp4 = []\n",
+    "\n",
+    "for i in range(len(y)-1):\n",
+    "    yp1.append(y[i+1] - y[i])\n",
+    "\n",
+    "\n",
+    "for i in range(len(yp1)-1):\n",
+    "    yp2.append(yp1[i+1] - yp1[i])\n",
+    "\n",
+    "for i in range(len(yp2)-1):\n",
+    "    yp3.append(yp2[i+1] - yp2[i])\n",
+    "\n",
+    "for i in range(len(yp3)-1):\n",
+    "    yp4.append(yp3[i+1] - yp3[i])\n",
+    "\n",
+    "table2 = pd.DataFrame({\n",
+    "    'y': y,\n",
+    "    'yp1': yp1 + [None],  # Заполняем последнюю позицию None\n",
+    "    'yp2': yp2 + [None, None],  # Заполняем последние позиции None\n",
+    "    'yp3': yp3 + [None, None, None],  # Заполняем последние позиции None\n",
+    "    'yp4' : yp4 + [None, None, None, None]\n",
+    "})\n",
+    "table2"
+   ],
    "outputs": [
     {
      "data": {
+      "text/plain": [
+       "          y       yp1       yp2       yp3       yp4\n",
+       "0  0.038482  0.044310  0.012017 -0.003192  0.001706\n",
+       "1  0.082792  0.056328  0.008826 -0.001486  0.002864\n",
+       "2  0.139120  0.065153  0.007340  0.001379  0.004703\n",
+       "3  0.204274  0.072493  0.008719  0.006081  0.009479\n",
+       "4  0.276767  0.081212  0.014800  0.015561  0.026049\n",
+       "5  0.357979  0.096012  0.030360  0.041610       NaN\n",
+       "6  0.453990  0.126372  0.071970       NaN       NaN\n",
+       "7  0.580362  0.198342       NaN       NaN       NaN\n",
+       "8  0.778704       NaN       NaN       NaN       NaN"
+      ],
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -328,18 +403,6 @@
        "  </tbody>\n",
        "</table>\n",
        "</div>"
-      ],
-      "text/plain": [
-       "          y       yp1       yp2       yp3       yp4\n",
-       "0  0.038482  0.044310  0.012017 -0.003192  0.001706\n",
-       "1  0.082792  0.056328  0.008826 -0.001486  0.002864\n",
-       "2  0.139120  0.065153  0.007340  0.001379  0.004703\n",
-       "3  0.204274  0.072493  0.008719  0.006081  0.009479\n",
-       "4  0.276767  0.081212  0.014800  0.015561  0.026049\n",
-       "5  0.357979  0.096012  0.030360  0.041610       NaN\n",
-       "6  0.453990  0.126372  0.071970       NaN       NaN\n",
-       "7  0.580362  0.198342       NaN       NaN       NaN\n",
-       "8  0.778704       NaN       NaN       NaN       NaN"
       ]
      },
      "execution_count": 7,
@@ -347,52 +410,36 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "\n",
-    "yp1 = []\n",
-    "yp2 = []\n",
-    "yp3 = [] \n",
-    "yp4 = []\n",
-    "\n",
-    "for i in range(len(y)-1):\n",
-    "    yp1.append(y[i+1] - y[i])\n",
-    "\n",
-    "\n",
-    "for i in range(len(yp1)-1):\n",
-    "    yp2.append(yp1[i+1] - yp1[i])\n",
-    "\n",
-    "for i in range(len(yp2)-1):\n",
-    "    yp3.append(yp2[i+1] - yp2[i])\n",
-    "\n",
-    "for i in range(len(yp3)-1):\n",
-    "    yp4.append(yp3[i+1] - yp3[i])\n",
-    "\n",
-    "table2 = pd.DataFrame({\n",
-    "    'y': y,\n",
-    "    'yp1': yp1 + [None],  # Заполняем последнюю позицию None\n",
-    "    'yp2': yp2 + [None, None],  # Заполняем последние позиции None\n",
-    "    'yp3': yp3 + [None, None, None],  # Заполняем последние позиции None\n",
-    "    'yp4' : yp4 + [None, None, None, None]\n",
-    "})\n",
-    "table2"
-   ]
+   "execution_count": 7
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
    "id": "c77832f6-0605-4a46-9fe9-f8e71e36ab2a",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-03T06:28:53.095645Z",
+     "start_time": "2024-12-03T06:28:53.085959Z"
+    }
+   },
    "source": [
     "R = ((b-a)*max(max(yp4),abs(min(yp4))))/180\n",
     "dI = (b-a)*max(max(yp4),abs(min(yp4)))"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 8
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
    "id": "00b592b1-94ad-4f98-bd0e-69279b1c27d6",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-03T06:28:53.350918Z",
+     "start_time": "2024-12-03T06:28:53.343341Z"
+    }
+   },
+   "source": [
+    "print(R,dI)"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -402,9 +449,7 @@
      ]
     }
    ],
-   "source": [
-    "print(R,dI)"
-   ]
+   "execution_count": 9
   }
  ],
  "metadata": {
