--- a/pr7/7.ipynb
+++ b/pr7/7.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-12-03T06:36:33.457437Z",
-     "start_time": "2024-12-03T06:36:32.554805Z"
+     "end_time": "2024-12-09T18:50:01.357798Z",
+     "start_time": "2024-12-09T18:50:00.319114Z"
     }
    },
    "source": [
@@ -16,13 +16,22 @@
     "import matplotlib.pyplot as plt"
    ],
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 1
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "# f(x) = cos(x) - x\n",
+    "# Найти экстремум функции, точность принять равную ε=0.01"
+   ],
+   "id": "1704da4b64ae516a"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-03T06:47:45.659183Z",
-     "start_time": "2024-12-03T06:47:45.629691Z"
+     "end_time": "2024-12-09T18:50:01.395314Z",
+     "start_time": "2024-12-09T18:50:01.372315Z"
     }
    },
    "cell_type": "code",
@@ -120,18 +129,18 @@
        "</div>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 17
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-03T06:48:23.810819Z",
-     "start_time": "2024-12-03T06:48:23.528758Z"
+     "end_time": "2024-12-09T18:50:01.904790Z",
+     "start_time": "2024-12-09T18:50:01.730620Z"
     }
    },
    "cell_type": "code",
@@ -153,15 +162,29 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 18
+   "execution_count": 3
   },
   {
    "metadata": {},
    "cell_type": "code",
+   "source": [
+    "a = 0\n",
+    "b = 3\n",
+    "while np.abs(a-b) > EPS:\n",
+    "    mid = (a+b)/2\n",
+    "    x1 = mid - EPS\n",
+    "    x2 = mid + EPS\n",
+    "    f1 = f(x1)\n",
+    "    f2 = f(x2)\n",
+    "    if f1 < f2:\n",
+    "        b = x2\n",
+    "    else:\n",
+    "        a = x1\n",
+    "    print(a,b)"
+   ],
+   "id": "55ca31bf85602a88",
    "outputs": [],
-   "execution_count": null,
-   "source": "while(np.abs(b-a) < EPS):\n",
-   "id": "55ca31bf85602a88"
+   "execution_count": null
   }
  ],
  "metadata": {
